
	* src/message-window.c:

2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* src/information-dialog.c (balsa_information_list):
	* src/main-window.c (bw_create_index_widget), (bw_set_panes),
	(balsa_window_new), (bw_notebook_label_new), (bw_find_real):

2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: restore filtering in a mailbox that is not currently
	being viewed.

	* libbalsa/mailbox.c (libbalsa_mailbox_message_match),
	(lbm_cache_message): make sure we cache message info when we need it
	for matching;
	* libbalsa/mailbox_local.c (message_match_real): guard against
	NULL threading-info;
	* src/filter-run-dialog.c (available_list_selection_changed),
	(selected_list_selection_changed): no need to disable the
	"Apply" buttons when the mailbox is not being viewed.

2020-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	filter-run-dialog: Disable "Apply selected" and "Apply now" when
	the mailbox is not currently being viewed in the main window. It
	no longer crashes, because of the previous commit, but it does
	not actually carry out any filters, so the user should see the
	option as disabled.

	* src/filter-run-dialog.c (available_list_selection_changed),
	(selected_list_selection_changed):

2020-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not crash when selecting "Apply selected" when the mailbox is
	not being viewed in the main window.

	* libbalsa/mailbox_local.c (message_match_real): check for NULL
	values;
	* src/filter-run-dialog.c (balsa_filter_run_dialog_new): call
	prepare-threading to get ready for filtering.
	Various: Stop using GtkBox padding, fill and expand child properties

	* src/filter-edit-callbacks.c (build_type_notebook),
	(build_condition_dialog):
	* src/filter-edit-dialog.c (build_left_side), (build_match_page),
	(build_action_page), (build_right_side), (filters_edit_dialog):